# models/models.go
@@ -175,6 +175,28 @@ type TopItemDTO struct {
 	Percentage  int    `json:"percentage"`
 }
 
+type ItemsSummary struct {
+	Month    int `json:"month"`
+	Year     int `json:"year"`
+	Quantity int `json:"quantity"`
+}
+
+type ItemsSummaryByMonth struct {
+	ID       int64 `json:"id"`
+	Month    int   `json:"month"`
+	Quantity int   `json:"quantity"`
+}
+
+type ItemsSummaryByMonthDTO struct {
+	Year   int64                 `json:"year"`
+	Months []ItemsSummaryByMonth `json:"months"`
+}
+
+type ItemsSummaryByYearDTO struct {
+	Year     int64 `json:"year"`
+	Quantity int64 `json:"quantity"`
+}
+
 type Auth struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
